04-10-2019 Firebase Integrated Google SignIn Integrated

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Track My Metro</string>
+    <string name="signed_out">sign Out</string>
+    <string name="google_status_fmt">Current User</string>
+    <string name="firebase_status_fmt">FireBase Uid</string>
 </resources>
